--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,6 +39,6 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/speedtest-monitor:latest
-            ghcr.io/${{ github.repository_owner }}/speedtest-monitor:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/speedtest-monitor:latest
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/speedtest-monitor:${{ github.sha }}
           platforms: linux/amd64
